Bug 1933 - Driver func DPMS on called too late on VT switch / Close.
Summary: Driver func DPMS on called too late on VT switch / Close.
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/DDX/Xorg (show other bugs)
Version: 6.8.1
Hardware: All All
: high normal
Assignee: Egbert Eich
QA Contact:
URL:
Whiteboard:
Keywords:
: 2201 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-11-26 06:30 UTC by Egbert Eich
Modified: 2005-01-11 22:34 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
[FIXED_X11R68x] Fix (3.04 KB, patch)
2004-11-26 06:32 UTC, Egbert Eich
roland.mainz: 6.8-branch+
Details | Splinter Review

Description Egbert Eich 2004-11-26 06:30:11 UTC
Patch improves DPMS handling on VT swich and server
termination/abort: previous version called the driver directly and
too late. The result can be that the chip locks up.

This patch also provides a check if xf86Info.kbdProc pointer is really set
before calling it on abort as this pointer won't be set if the new modular
keyboard driver is used. Without this the server may segfault.
This patch is provided by Matthias Hopf. 
(Sorry, no extra ticket for this one liner).

Both patches have been committed to HEAD already.
This is for nomination for 6.8.2 only.
Comment 1 Egbert Eich 2004-11-26 06:32:13 UTC
Created attachment 1392 [details] [review]
[FIXED_X11R68x] Fix

See above comment. For nomination purposes only!
Comment 2 Roland Mainz 2004-12-08 05:54:35 UTC
Comment on attachment 1392 [details] [review]
[FIXED_X11R68x] Fix

Approved in the 2004-12-06 release-wranglers conference call.
Please do not commit it yourself, I'll do that later today...
Comment 3 Roland Mainz 2004-12-14 21:36:54 UTC
Comment on attachment 1392 [details] [review]
[FIXED_X11R68x] Fix

Patch checked-in into X11R6.8.x stable branch:

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.365.2.76; previous revision: 1.365.2.75
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/hw/xfree86/common/xf86Events.c,v	<-- 
xf86Events.c
new revision: 1.3.2.1; previous revision: 1.3
/cvs/xorg/xc/programs/Xserver/hw/xfree86/common/xf86Init.c,v  <--  xf86Init.c
new revision: 1.12.2.1; previous revision: 1.12
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...
Comment 4 Roland Mainz 2004-12-14 21:37:41 UTC
Patch checked-in into Xorg trunk and X11R6.8.x stable branch...

... marking bug as FIXED.
Comment 5 Alan Coopersmith 2005-01-12 17:34:02 UTC
*** Bug 2201 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.