xc/programs/Xserver/hw/xfree86/common/xf86Events.c //bugs.freedesktop.org/show_bug.cgi?id=1933) attachment #1392     (https://bugs.freedesktop.org/attachment.cgi?id=1392): Improving DPMS     handling on VT swich and server termination/abort: previous version     called the driver directly and too late. Patch by Egbert Eich     <eich@freedesktop.org>